--- a/style.css
+++ b/style.css
@@ -1,8 +1,62 @@
+@font-face {
+    font-family: 'iFoodRCTextos';
+    src: url('Assets/fonts/iFoodRCTextos-Bold.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
 html, body {
+    width: 100%;
     height: 100%;
+    font-family: 'iFoodRCTextos', sans-serif;
 }
 
 .form-container {
-    max-width: 600px;
+    height: 83%;
+    max-width: 475px;
     padding: 1rem;
+    border: 1px solid #aa1b1b;
+    border-radius: 1em;
+}
+
+hr {
+    margin: 0 5px;
+    color: #EA1D2C;
+    width: 100%;
+}
+
+.custom-card {
+    border-radius: 15px;
+    padding: 10px;
+    background-color: rgb(219, 220, 221);
+}
+
+.custom-icon {
+    font-size: 1.5rem;
+}
+.fixed-bottom-icons {
+    font-size: 1.6rem;
+}
+
+.nav-link span {
+    margin-left: 5px;
+    font-size: 1rem;
+}
+
+.navbar-custom {
+    justify-content: space-between;
+}
+
+.navbar-top a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.navbar-top a i {
+    font-size: 1.5rem;
+}
+
+.no-gap-md {
+    gap: 0 !important;
 }
